...
          onPress={signIn}
          stretch
        />
        <View style={styles.spacer} />
        <Button
          kind="secondary"
          label="Google"
          accessibilityLabel="Continue with Google"
          onPress={account.continueWithGoogle}
          stretch
        />
      </View>

...
