...
            onPress={last ? finish : () => setStep(step + 1)}
          />
        </View>
      }>
      <View style={styles.skip}>
        <TextLink
          label="Skip"
          role="button"
          color="graphite"
          variant="body"
          onPress={finish}
        />
      </View>
...
